Fix image alignment

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
     line-height: 1.5rem;
 
     background-image: url('images/header.png');
+    background-color: blue;
     background-size: contain;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -104,9 +105,9 @@ li a:hover {
 #content {
     background-color: white;
     padding: 2rem;
-    text-align: justify;
     display: flex;
     justify-content: center;
+    align-items: center;
     flex-direction: column;
 }
 
@@ -114,8 +115,12 @@ li a:hover {
     box-shadow: 2px 2px 3px 2px rgba(0, 0, 0, 0.4);
     margin: 2rem;
     margin-left: 0;
-    width: 50%;
+    width: 50%; max-width: 15rem;
     height: 50%;
+}
+
+#content p {
+    text-align: justify;
 }
 
 @media only screen and (min-width: 768px) {
@@ -129,6 +134,7 @@ li a:hover {
 
     #header {
         gap: 1rem;
+        padding: 8rem 0 6rem;
     }
 
     #header button {
